# aula06_bootcamp

./: .pre-commit-config.yaml  main.py  main2.py  pyproject.toml
